/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto2";
package org.acme.travels.visaApplications;
import "kogito-index.proto";
import "kogito-types.proto";
option kogito_model = "VisaApplications";
option kogito_id = "visaApplications";

/* @Indexed */
message VisaApplication {
  option java_package = "org.acme.travels.visaApplications";
  /* @Field(index = Index.NO, store = Store.YES) @SortableField */
  optional bool approved = 1;
  /* @Field(index = Index.NO, store = Store.YES) @SortableField */
  optional string city = 2;
  /* @Field(index = Index.NO, store = Store.YES) @SortableField */
  optional string country = 3;
  /* @Field(index = Index.NO, store = Store.YES) @SortableField */
  optional int32 duration = 4;
  /* @Field(index = Index.NO, store = Store.YES) @SortableField */
  optional string firstName = 5;
  /* @Field(index = Index.NO, store = Store.YES) @SortableField */
  optional string lastName = 6;
  /* @Field(index = Index.NO, store = Store.YES) @SortableField */
  optional string nationality = 7;
  /* @Field(index = Index.NO, store = Store.YES) @SortableField */
  optional string passportNumber = 8;
}
/* @Indexed */
message VisaApplications {
  option java_package = "org.acme.travels.visaApplications";
  /* @Field(index = Index.YES, store = Store.YES) @SortableField */
  optional string id = 1;
  /* @Field(index = Index.NO, store = Store.YES) */
  optional VisaApplication visaApplication = 2;
  /* @Field(index = Index.NO, store = Store.YES) */
  optional org.kie.kogito.index.model.KogitoMetadata metadata = 3;
}
